# relay

./: .gitignore  Cargo.toml  LICENSE  README.md  SKILL.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: config.rs  git.rs  handoff.rs  hooks.rs  lib.rs  main.rs  notify.rs  orchestrator.rs  parser.rs  prompt_runner.rs  session.rs  statusline.rs  storage.rs  tui.rs  util.rs
src/api/: auth.rs  mod.rs  routes.rs  state.rs  ws.rs
static/: index.html
tests/: api_tests.rs
