[package]
name = "relay"
version = "0.1.0"
edition = "2021"
description = "CLI daemon that monitors Claude Code sessions and generates handoffs"

[features]
default = ["notifications"]
notifications = ["notify-rust"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
notify-rust = { version = "4", optional = true }
anyhow = "1"
colored = "2"
toml = "0.8"
ratatui = "0.28"
crossterm = "0.28"
ureq = { version = "2", features = ["json"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
rust-embed = { version = "8", features = ["axum"] }
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
